# OpenVINO-detector

./: .gitignore  CMakeLists.txt  Timestamp.h  main.cpp
detection/: detector.cpp  detector.h  dummydet.cpp  dummydet.h  efficientdet.cpp  efficientdet.h  yolov2_detector.cpp  yolov2_detector.h
ie/: ie_network.cpp  ie_network.h  network.h
